--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -32,6 +32,8 @@ body{
     font-weight: bold;
     margin-bottom: 5px;
     color: var(--white-color);
+    border-bottom: 10px;
+    border-color: black;
   }
   
   .Titulo_navegacion{
@@ -45,7 +47,6 @@ body{
     font-size: .938rem;
     font-family: var(--body-font);
     display: inline-block;
-    color: #ffff;
     transition: 0.4s;
     padding: 0px 20px;
   }
@@ -57,17 +58,26 @@ body{
 .Texto_Inicio{
     position: absolute;
     margin-right: 55%;
+    margin-top: 250px;
+    font-size: var(--body-font);
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
+    color: var(--white-color);
 }
 .Logo_I{
     display: flex;
-    position: relative;
-    margin-left: 65%;
-    margin-top: 5%;
+    margin-left: 34%;
 }
-h3{
-    position: absolute;
-    margin-top: 380px;
-    margin-right: 10%;
+h2{
+  display: flex;
+
+  margin-top: 20px;
+  margin-left: 30%;
+  text-shadow: 2px 2px var(--white-color);
+}
+.Imagen_3{
+  position: relative;
+  margin-left: 60%;
+  margin-top: 350px;
+  justify-content: space-between;
 }
