--- a/CSS/Sing_In.css
+++ b/CSS/Sing_In.css
@@ -10,13 +10,12 @@
     align-items: center;
     min-height: 100vh;
     color: black;
+    background-image: url("../IMG/Background_1.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
     
 
-}
-.imagen_background{
-    height: 100%;
-    width: 100%;
-    position: fixed;
 }
 .Sing_In{
     width: 420px;
@@ -30,7 +29,7 @@
 }
 .Sing_In .User{
     width: 100%;
-    height: 50px;
+    height: 60px;
     margin: 30px 0;
     font-size: 16px;
     color: black;
@@ -39,16 +38,12 @@
 }
 .User input{
     width: 100%;
-    height: 70%;
-    background: transparent;
+    height: 1rem;
     border: none;
     outline: none;
-    border: 10px solid;
+    border: 10px black;
     border-radius: 40px;
     
-}
-input{
-    font-family: Arial, Helvetica, sans-serif;
 }
 .Sing_In .remeber{
     display: flex;
@@ -59,6 +54,11 @@ input{
 }
 .Sing_In, p{
     color: black;
+}
+#mensajeError{
+    display: flex;
+    margin-top: 25rem;
+    margin-left: 0;
 }
 
 
